--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,11 +39,11 @@ steps:
     command: 'restore'
     projects: '**/*.csproj'
 
-template: templates/build.yaml
+- template: templates/build.yaml
 parameters:
   buildConfiguration: 'Debug'
 
-template: templates/build.yaml
+- template: templates/build.yaml
 parameters:
   buildConfiguration: 'Release'
 
